--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,3 +42,5 @@ set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
+# Disable rename
+set-option -g allow-rename off 
