--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,8 +39,8 @@ set -g default-terminal "screen-256color"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -T vi-copy 'v' begin-selection
+bind-key -T vi-copy 'y' copy-selection
 
 # Disable rename
 set-option -g allow-rename off 
