Refactor correction of comments

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set -g prefix C-a
 # Free the original Ctrl-b prefix keybinding
 unbind C-b
 
-#setting the delay between prefix and command
+# Setting the delay between prefix and command
 set -s escape-time 1
 
 # Reload the file with Prefix r
