--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ unbind C-b
 # Setting the delay between prefix and command
 set -s escape-time 1
 
+# Setting a base index
+set -g base-index 1
+
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
