--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,8 +42,8 @@ set -g default-terminal "screen-256color"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
-bind-key -T vi-copy 'v' begin-selection
-bind-key -T vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Disable rename
 set-option -g allow-rename off 
