Add toogle synchronize panes binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,3 +47,6 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-name
 
 # Disable rename
 set-option -g allow-rename off 
+
+# Toggle synchronize panes on/off
+bind -n C-x setw synchronize-panes
