--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,3 +50,39 @@ set-option -g allow-rename off
 
 # Toggle synchronize panes on/off
 bind -n C-x setw synchronize-panes
+
+# Prompt for window name upon creating a new windo:
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
+
+# Dracula color theme
+set -g status-bg "colour59"
+set -g message-command-fg "colour117"
+set -g status-justify "left"
+set -g status-left-length "100"
+set -g status "on"
+set -g pane-active-border-style fg='colour61'
+set -g pane-border-style fg="colour59"
+set -g message-bg "colour59"
+set -g status-right-length "100"
+set -g status-right-attr "none"
+set -g message-fg "colour117"
+set -g message-command-bg "colour59"
+set -g status-attr "none"
+set -g status-left-attr "none"
+setw -g window-status-fg "colour231"
+setw -g window-status-attr "none"
+setw -g window-status-activity-bg "colour59"
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-fg "colour215"
+setw -g window-status-separator ""
+setw -g window-status-bg "colour59"
+set -g status-left "#[fg=colour17,bg=colour215] #S #[fg=colour215,bg=colour59,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour61,bg=colour59,nobold,nounderscore,noitalics]#[fg=colour231,bg=colour61] %Y-%m-%d | %H:%M #[fg=colour141,bg=colour61,nobold,nounderscore,noitalics]#[fg=colour17,bg=colour141] #h "
+setw -g window-status-format "#[fg=colour231,bg=colour59] #I |#[fg=colour231,bg=colour59] #W "
+setw -g window-status-current-format "#[fg=colour59,bg=colour59,nobold,nounderscore,noitalics]#[fg=colour117,bg=colour59] #I |#[fg=colour117,bg=colour59] #W #[fg=colour59,bg=colour59,nobold,nounderscore,noitalics]"
+
+# List of plugins
+#set -g @plugin 'tmux-plugins/tpm'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+#run -b "~/.tmux/plugins/tpm/tpm"
